--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div data-role="content">
 			<div class="app">
 				<img src="img/logo.png" />
-				<form name="loginform" id="loginform" action="http://www.ofir.hr/asd/wp-login.php" method="post">
+				<form name="loginform" id="loginform" action="http://ofir.hr/asd/wp-login.php" method="post">
 					<p>
 						<label for="user_login">Korisničko ime<br />
 						<input type="text" name="log" id="user_login" class="input" value="" size="20" /></label>
@@ -29,7 +29,7 @@
 						
 					<p class="submit">
 						<input type="submit" name="wp-submit" id="wp-submit" class="button button-primary button-large" value="Prijava" />
-						<input type="hidden" name="redirect_to" value="http://www.ofir.hr/asd/scan/druga.html" />
+						<input type="hidden" name="redirect_to" value="scan/druga.html" />
 						<input type="hidden" name="testcookie" value="1" />
 					</p>
 				</form>
