--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						
 					<p class="submit">
 						<input type="submit" name="wp-submit" id="wp-submit" class="button button-primary button-large" value="Prijava" />
-						<input type="hidden" name="redirect_to" value="scan/druga.html" />
+						<input type="hidden" name="redirect_to" value="druga.html" />
 						<input type="hidden" name="testcookie" value="1" />
 					</p>
 				</form>
