--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ if(isNaN(data)){
 
 }else{
 				
-			window.location.replace("druga.html");
+			window.location.replace("http://ww.ofir.hr/asd/scan/druga.html");
         }
   }
         function onError(data, status)
