--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		
 	
 if(isNaN(data)){
-
+window.location.replace("druga.html");
 }else{
 				
-			window.location.replace("http://ww.ofir.hr/asd/scan/druga.html");
+			window.location.replace("druga.html");
         }
   }
         function onError(data, status)
