--- a/druga.html
+++ b/druga.html
@@ -30,7 +30,7 @@
 						<p class="event listening">Connecting to Device</p>
 						<p class="event received">Device is Ready</p>
 					</div>
-					<div class="box"> <span><p><a href="#" class="topcoat-button" id="scan"></a></p></span> </div>
+					<p><a href="#" class="topcoat-button" id="scan">SCAN</a></p>
 					<p id="info"></p>
 				   
 				</div>
