--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         {
            data = $.trim(data);
           // $("#notification").html(data);
-		   sessionStorage.setItem("x", data);
+		   sessionStorage.setItem("ID", data);
 		
 	
 if(isNaN(data)){
-window.location.replace("druga.html");
+
 }else{
 				
 			window.location.replace("druga.html");
