--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ if(isNaN(data)){
   
                 $.ajax({
                     type: "POST",
-                    url: "http://localhost/asd/callajax.php",
+                    url: "http://www.ofir.hr/asd/callajax.php",
                     cache: false,
                     data: formData,
                     success: onSuccess,
