--- a/druga.html
+++ b/druga.html
@@ -28,7 +28,7 @@
 						<p class="event listening">Connecting to Device</p>
 						<p class="event received">Device is Ready</p>
 					</div>
-					<div class="boxe"> <span><p><a href="#" class="topcoat-button" id="scan"></a></p></span> </div>
+					<div class="box"> <span><p><a href="#" class="topcoat-button" id="scan"></a></p></span> </div>
 					<p id="info"></p>
 				   
 			</div>
