--- a/druga.html
+++ b/druga.html
@@ -13,20 +13,20 @@
 		<script src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
 		<script src="http://code.jquery.com/mobile/1.0a4/jquery.mobile-1.0a4.min.js"></script>
 		<meta charset="utf-8">
-        <title>ASD</title>
+        <title>ASD Ticket-App</title>
     </head>
     <body>
         <div data-role="page" data-theme="b" id="druga">
 		<div data-role="header">
-            <p>ASD Online Marketing</p>
+            <p>ASD Ticket-App</p>
         </div>
 		<div data-role="content">
 			<div class="app">
 					<img src="img/logo.png" />
 					
 					<div id="deviceready" class="blink">
-						<p class="event listening">Connecting to Device</p>
-						<p class="event received">Device is Ready</p>
+						<p class="event listening">Anschluss an Geräte</p>
+						<p class="event received">Ticket-Scanner ist bereit</p>
 					</div>
 					<div class="box"> <span><p><a href="#" class="topcoat-button" id="scan"></a></p></span> </div>
 					<p id="info"></p>
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 		<div data-role="footer">
-             <p>&reg; Sva prava pridržana <a href="http://ofir.hr/">Ofir d.o.o</a></p>
+             <p>&reg; Copyright - Alle Rechte by <a href="http://asd-online-marketing.de">ASD Online Marketing UG</a></p>
         </div>
 	</div>
         <script type="text/javascript" src="cordova.js"></script>
