--- a/druga.html
+++ b/druga.html
@@ -29,7 +29,7 @@
 						<p class="event received">Ticket-Scanner ist bereit</p>
 					</div>
 					<div class="box"> <span><p><a href="#" class="topcoat-button" id="scan"></a></p></span> </div>
-					<p id="info"></p>
+					<div id="info"></div>
 				   
 			</div>
 		</div>
