--- a/druga.html
+++ b/druga.html
@@ -33,7 +33,7 @@
 				   
 			</div>
 		</div>
-		<div data-role="footer">
+		<div class="footer" data-role="footer">
              <p>&reg; Copyright - Alle Rechte by <a href="http://asd-online-marketing.de">ASD Online Marketing UG</a></p>
         </div>
 	</div>
